# tormach-arm

./: .clang-format  .cmake-format.yaml  .docker-version  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE.txt  README.md  launch_za_dist_image.sh
.ci/: xmlformat.sh
.github/workflows/: docker-image.yaml  pre-commit.yaml
devel_scripts/: .image-version.sh.swp  changelog  docker-dev.sh  env.sh  image-version.sh  launch_za_dist_image.sh  run_tests.sh
devel_scripts/docker/: Dockerfile  README.md  env.sh  package-env.sh
devel_scripts/docker/base/: 1-system.sh
moveit_studio_za6_base_config/: CMakeLists.txt  README.md  package.xml
moveit_studio_za6_base_config/config/: base_config.yaml  waypoints.yaml
moveit_studio_za6_base_config/config/moveit/: ompl_planning.yaml  sensors_3d.yaml  za6_servo.yaml
moveit_studio_za6_base_config/description/: za6.xacro
moveit_studio_za6_base_config/objectives/: close_gripper.xml  cycle_between_waypoints.xml  interpolate_to_joint_state.xml  move_to_known_pose.xml  move_to_named_pose.xml  open_gripper.xml  reactivate_gripper.xml  teleoperate.xml
moveit_studio_za6_tending_config/: CMakeLists.txt  README.md  package.xml
moveit_studio_za6_tending_config/config/: config.yaml  initial_positions.yaml
moveit_studio_za6_tending_config/config/moveit/: ur_servo.yaml  za6_machine_tending.srdf
moveit_studio_za6_tending_config/description/: picknik_ur_machine_tending.xacro  za6_machine_tending.xacro
moveit_studio_za6_tending_config/meshes/: cnc-collision.dae  cnc.dae  table-collision.dae  table.dae
moveit_studio_za6_tending_config/objectives/: 3_waypoint_pick_and_place.xml  constrained_pick_place.xml  cycle_between_waypoints.xml  joint_diagnostic.xml  my_constraints.yaml
moveit_studio_za6_tending_config/waypoints/: machine_tending_waypoints.yaml
site_configs/tormach_za6_base_config/: CMakeLists.txt  package.xml
tormach_za6_base_config/: CMakeLists.txt
tormach_za6_base_config/objectives/: teleoperate.xml
za6_bringup/: CMakeLists.txt  README.md  package.xml
za6_bringup/launch/: bringup.launch
za6_description/: CMakeLists.txt  README.md  package.xml
za6_description/config/: initial_positions.yaml  za6.rviz
za6_description/launch/: display_za6.launch.py  robot_description.launch.py
za6_description/meshes/visual/: base_link.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
za6_description/test/: test_view_za6_launch.py  test_za6_urdf_xacro.py
za6_description/urdf/: za6.ros2_control.xacro  za6.xacro  za6_macro.xacro
za6_hardware/: CMakeLists.txt  README.md  inovance-dump.txt  package.xml
za6_hardware/config/: hal_config.yaml  hal_device_config.yaml  hal_hw_device_mgr.yaml  hal_hw_interface.yaml  hal_io.yaml  hal_io_config.yaml  hal_sim_devices.yaml  hardware_settings.yaml  io_config.yaml
za6_hardware/hal_plumber/: __init__.py  base.py  drive_state.py  hw_device_mgr.py  joint.py  robot_io_pins.py  start_realtime.py
za6_hardware/halfiles/: za6.hal.py
za6_hardware/launch/: hal_hardware.launch.py
za6_hardware/scripts/: drive_state  dump_params  hw_device_mgr
za6_hardware/src/: drive_safety.icomp  est.icomp  latency.icomp  limit3v3.icomp  pll.icomp  ppi.icomp  qc.icomp
za6_hardware/src/ros.HAL-IO/: HAL-IO.qml
za6_hardware/utils/: calc_joint_scales.py
za6_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml  za6_moveit_config-extras.cmake
za6_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_settings.yaml  ros2_controllers.yaml  za6.srdf  za6.srdf.xacro
za6_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
za6_moveit_studio_config/: CMakeLists.txt  package.xml
za6_moveit_studio_config/config/: base_config.yaml  waypoints.yaml
za6_moveit_studio_config/config/moveit/: ompl_planning.yaml  za6_servo.yaml
za6_moveit_studio_config/objectives/: clear_snapshot.xml  cycle_between_waypoints.xml  interpolate_to_joint_state.xml  move_to_known_pose.xml  move_to_named_pose.xml  move_to_pose.xml  move_to_waypoint.xml
za6_tools/: CMakeLists.txt  README.md  package.xml  za6_tools-extras.cmake
za6_tools/cmake/: za6_tools_grippers.cmake.in
za6_tools/config/: pivot_gripper.srdf.xacro  robotiq_hand_e.srdf.xacro  robotiq_hand_e_gripper.srdf.xacro  tool_frames.yaml  tool_urdfs.yaml  versabuilt_multigrip.srdf.xacro
za6_tools/launch/: display_gripper.launch.py  display_pcnc1100.launch.py  display_pivot_gripper.launch  display_pivot_gripper.launch.py  display_robotiq_hand_e.launch  display_robotiq_hand_e.launch.py  display_versabuilt_multigrip.launch  display_versabuilt_multigrip.launch.py
za6_tools/meshes/: adapter_za6_robotiq_collision.stl  pivot_gripper_base.stl  pivot_gripper_base_collision.stl  pivot_gripper_finger_left.stl  pivot_gripper_finger_left_collision.stl  pivot_gripper_finger_right.stl  pivot_gripper_finger_right_collision.stl  robotiq_hand-e_finger.stl  robotiq_hand-e_finger_collision.stl  versabuilt_multigrip_base_and_fixed_jaw.stl  versabuilt_multigrip_base_and_fixed_jaw_collision.stl  versabuilt_multigrip_moving_jaw.stl  versabuilt_multigrip_moving_jaw_collision.stl
za6_tools/meshes/pcnc1100/: pcnc1100.dae
za6_tools/rviz/: none.rviz  pcnc1100.rviz  pivot_gripper.rviz  robotiq_hand_e.rviz  versabuilt_multigrip.rviz
za6_tools/test/: test_display_gripper_launch.py  test_display_pcnc1100_launch.py  test_gripper_xacro.py  test_pcnc1100_xacro.py
za6_tools/urdf/: gripper.urdf.xacro  none.urdf.xacro  none_macro.xacro  pivot_gripper.urdf.xacro  pivot_gripper.xacro  pivot_gripper_macro.xacro  pivot_gripper_standalone.xacro  robotiq_hand_e.urdf.xacro  robotiq_hand_e.xacro  robotiq_hand_e_macro.xacro  robotiq_hand_e_standalone.xacro  versabuilt_multigrip.urdf.xacro  versabuilt_multigrip.xacro  versabuilt_multigrip_macro.xacro  versabuilt_multigrip_standalone.xacro
za6_tools/urdf/pcnc1100/: pcnc1100.urdf.xacro  pcnc1100_macro.xacro
(+31 files in other folders)
