<?xml version="1.0"?>
<package format="3">
  <name>moveit_studio_za6_base_config</name>
  <version>1.0.0</version>

  <description>Base studio configuration package for Tormach ZA6</description>

  <maintainer email="abishalini.sivaraman@picknik.ai">Abishalini Sivaraman</maintainer>
  <maintainer email="michael.wrock@picknik.ai">Michael Wrock</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ZA6 URDF and MoveIt config -->
  <exec_depend>za6_description</exec_depend>
  <exec_depend>za6_moveit_config</exec_depend>

  <!-- PickNik MoveIt Studio dependencies -->
  <exec_depend>moveit_studio_agent</exec_depend>
  <exec_depend>moveit_studio_behavior</exec_depend>

  <!-- Realsense URDF -->
  <exec_depend>realsense2_description</exec_depend>
  <!-- ros-gazebo dependencies -->
  <exec_depend>ros_gz</exec_depend>
  <!-- ignition gazebo sim interfaces to ros2_control -->
  <exec_depend>ign_ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
