<?xml version="1.0"?>
<package format="3">
  <name>za6_moveit_studio_config</name>
  <version>1.0.0</version>

  <description>Base studio configuration package for Tormach ZA6</description>

  <maintainer email="abishalini.sivaraman@picknik.ai">Abishalini Sivaraman</maintainer>
  <maintainer email="michael.wrock@picknik.ai">Michael Wrock</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>za6_description</exec_depend>
  <exec_depend>za6_moveit_config</exec_depend>

  <exec_depend>picknik_accessories</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
